k8/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
            # - name: initdb
            #   mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc
        # - name: initdb
        #   configMap:
        #     name: db-init
  strategy:
    type: Recreate
