k8/ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: service-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: service-api
    spec:
      containers:
        - name: service-api
          image: jainmohit535/assignment-demo:v2
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
