k8/ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: service-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
